--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.2.2",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "@types/jquery": "^3.3.38",
     "bootstrap": "^4.0.0",
