--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
+              "src/fav.png",
               "src/assets"
             ],
             "styles": [
